# secret-project-331

./: .coderabbit.yaml  .dockerignore  .editorconfig  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .linguirc  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc  Dockerfile.node.base.dockerfile  Dockerfile.node.cache.dockerfile  Dockerfile.skaffold  README.md  Tiltfile  Vagrantfile  crates.js  eslint.config.js  flake.nix  help.html  merge_next_apps.py  migrate_app_router.py  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  restructure_for_app_router.py  rust-toolchain.toml  settings.html  skaffold.production.yaml  skaffold.production.yml  skaffold.yaml  skaffold.yml  source-files.js  (+3 more)
.devcontainer/: Dockerfile  (+2 more)
headless-lms/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  DockerfileBase.dockerfile  README.md  requests.rest  sqlx-data.json
headless-lms/db/: seed.sql
headless-lms/kubernetes/: deployment.yml  postgres-dev.yml
headless-lms/migrations/: 20210216125447_setup_db.down.sql  20210216125447_setup_db.up.sql  20210223081451_add_submissions.down.sql  20210223081451_add_submissions.up.sql  20210416062216_add_slugs.down.sql  20210416062216_add_slugs.up.sql  20210416092619_make_exercise_item_assignment_not_null.up.sql  20210428102857_add_score_maximum_to_exercise.up.sql  20210430073130_add_public_spec_to_exercise_items.down.sql  20210430073130_add_public_spec_to_exercise_items.up.sql  20210430121801_add_course_part_id_to_pages.up.sql  20210505102130_add_users.up.sql  20210505105627_make_submission_grading_id_nullable.up.sql  20210528050335_rename_unscaled_max_points_to_unscaled_score_maximum.down.sql  20210528091159_change_deleted_to_deleted_at.down.sql  20210528091159_change_deleted_to_deleted_at.up.sql  20210603174417_change_timestamps_to_have_timezone.up.sql
headless-lms/src/: main.rs
headless-lms/src/controllers/: courses.rs  files.rs  mod.rs  organizations.rs  pages.rs
headless-lms/src/controllers/cms/: course_parts.rs  courses.rs  exercises.rs  mod.rs  organizations.rs  pages.rs
headless-lms/src/controllers/course_material/: course_parts.rs  courses.rs  exercises.rs  mod.rs  organizations.rs  submissions.rs
headless-lms/src/models/: course_parts.rs  courses.rs  exercise_items.rs  exercises.rs  gradings.rs  mod.rs  organizations.rs  pages.rs  submissions.rs
headless-lms/src/utils/: document_schema_processor.rs  folder_checksum.rs  mod.rs  pagination.rs
headless-lms/src/utils/file_store/: local_file_store.rs  mod.rs
services/headless-lms/: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  DbDocs.dockerfile  Dockerfile  Dockerfile.production.cache.dockerfile  Dockerfile.production.dockerfile  Dockerfile.production.slim.dockerfile  DockerfileBase.dockerfile  DockerfileDevelopmentBase.dockerfile  DockerfileProductionBase.dockerfile  README.md  clippy.toml  icu4x.postcard  location-export.patch  requests.rest  setup-database.sh  sqlx-data.json  wait-for-db-migrations.sh  wait-for-db.sh  wait-for-redis.sh
services/headless-lms/base/: Cargo.toml
services/headless-lms/certificates/: Cargo.toml
services/headless-lms/chatbot/: Cargo.toml
services/headless-lms/db/: seed  seed.sql
services/headless-lms/doc-macro/: Cargo.toml
services/headless-lms/entrypoint/: Cargo.toml
services/headless-lms/exercise-services-api/: Cargo.toml
services/headless-lms/job/: update-course-variant-statuses.yml
services/headless-lms/langs-api/: Cargo.toml
services/headless-lms/migrations/: 20210216125447_setup_db.down.sql  20210416092619_make_exercise_item_assignment_not_null.down.sql  20210428102857_add_score_maximum_to_exercise.down.sql  20210428152927_create_course_parts.down.sql  20210428152927_create_course_parts.up.sql  20210430071032_add_page_id_to_course_parts.down.sql  20210430071032_add_page_id_to_course_parts.up.sql  20210503061144_add_fix_course_path_uniqueness_index.down.sql  20210503061144_add_fix_course_path_uniqueness_index.up.sql  20210504040825_update_submissions.down.sql  20210504040825_update_submissions.up.sql  20210505102130_add_users.down.sql  20210505105627_make_submission_grading_id_nullable.down.sql  20210528050335_rename_unscaled_max_points_to_unscaled_score_maximum.up.sql  20210603174417_change_timestamps_to_have_timezone.down.sql  20210607104520_rename_course_parts_to_chapter.down.sql  20210607104520_rename_course_parts_to_chapter.up.sql  20210607113519_rename_chapter_page_id_to_front_page_id.down.sql  20210607113519_rename_chapter_page_id_to_front_page_id.up.sql  20210607121853_page-order-number.down.sql  20210607121853_page-order-number.up.sql  20210607201656_create-roles.down.sql  20210607201656_create-roles.up.sql  20210608070822_rename_chapter_contraints.down.sql  20210608070822_rename_chapter_contraints.up.sql  20210609061756_change_unique_constraints_to_handle_null_values.down.sql  20210609061756_change_unique_constraints_to_handle_null_values.up.sql  20210609093333_add_legacy_id_for_users.down.sql  20210609093333_add_legacy_id_for_users.up.sql  20210609093333_add_upstream_id_for_users.down.sql  20210609093333_add_upstream_id_for_users.up.sql  20210609111555_add_user_exercise_states.down.sql  20210609111555_add_user_exercise_states.up.sql  20210610124821_exercise_order_number.down.sql  20210610124821_exercise_order_number.up.sql  20210611045905_add_exercise_services.down.sql  20210611045905_add_exercise_services.up.sql  20210611092622_add_timestamps_to_user_roles.down.sql  20210611092622_add_timestamps_to_user_roles.up.sql  20210611094331_add_course_variant_status_to_course_instances.down.sql  (+540 more)
services/headless-lms/models/: .env.example  Cargo.toml  sqlx-data.json  sqlx.toml
services/headless-lms/server/: Cargo.toml
services/headless-lms/shared-module/: bindings.guard.ts  bindings.ts
services/headless-lms/src/: lib.rs  main.rs  regrader.rs  regrading.rs  test_helper.rs  ts_binding_generator.rs
services/headless-lms/tests/: helper.rs  integration_test.rs
services/headless-lms/utils/: Cargo.toml
(+376580 files in other folders)
