[package]
name = "headless-lms-actix"
version = "0.1.0"
authors = ["Henrik Nygren <nygrenh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To add a new dependency, search for it using `cargo search` and take the latest version of the package
# and the comment from there.

[dependencies]
# Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust
actix-web = "4.0.0-beta.3"
# Tokio-based single-threaded async runtime for the Actix ecosystem
actix-rt = "2.1.0"
# Static file serving for Actix Web
actix-files = "0.5.0"
# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio = { version = "1.2.0", features = ["fs", "io-util"] }
# Additional utilities for working with Tokio.
tokio-util = { version = "0.6.3", features = ["io"] }
# An implementation of futures and streams featuring zero allocations, composability, and itera…
futures = "0.3.13"
# A `dotenv` implementation for Rust
dotenv = "0.15.0"
# A simple library to work with listenfds passed from the outside (systemd/catflap socket activation)
listenfd = "0.3.3"
# A logging implementation for `log` which is configured via an environment variable.
env_logger = "0.8.3"
# A lightweight logging facade for Rust
log = "0.4.14"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.38"
# 🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries
sqlx = { version = "0.5.1", features = [ "postgres", "runtime-actix-rustls", "uuid", "chrono", "json", "offline" ] }
# A library to generate and parse UUIDs.
uuid = { version = "0.8.2", features = ["serde", "v4"] }
# A generic serialization/deserialization framework
serde = { version = "1.0.123", features = ["derive"]}
# Date and time library for Rust
chrono = { version = "0.4.19", features = ["serde"] }
# A JSON serialization file format
serde_json = "1.0.62"
# Adds #[derive(x)] macros for more traits
derive_more = "0.99.11"
# A library to create HTTP error response content for APIs based on RFC 7807
http-api-problem = "0.21.0"
# A crate for uploading files to Google cloud storage, and for generating download urls.
cloud-storage = "0.8.0"
# A library for managing a temporary directory and deleting all contents when it's dropped.
tempdir = "0.3.7"
# Type erasure for async trait methods
async-trait = "0.1.42"
# Types and traits for working with bytes
bytes = "1.0.1"
# Extra iterator adaptors, iterator methods, free functions, and macros.
itertools = "0.10.0"
# Random number generators and other randomness functionality.
rand = "0.8.3"


[dev-dependencies]
# Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs.
pretty_assertions = "0.7.1"
