[workspace]
members = [
  "entrypoint",
  "server",
  "models",
  "utils",
  "doc-macro",
  "certificates",
  "chatbot",
  "langs-api",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [
  "University of Helsinki <mooc@cs.helsinki.fi>",
  "Henrik Nygren <nygrenh@gmail.com>",
]
edition = "2021"
rust-version = "1.66.0" # minimum required Rust version, update if you use a new API
license = "Apache-2.0"

[profile.dev]
# Include only line tables so that we get line numbers in backtraces
debug = 1

# Speeds up development builds because the sqlx macros do a lot of work during compile time
[profile.dev.package.sqlx-macros]
opt-level = 3

# Speeds up development server startup time because parsing ip to country mappings benefits from the optimizations.
[profile.dev.package.ipnet]
opt-level = 3

[profile.release]
# Include only line tables so that we get line numbers in backtraces
debug = 1

[workspace.dependencies]
tokio = { version = "1.43.0", features = [
  "fs",
  "io-util",
  "sync",
  "parking_lot",
  "rt-multi-thread"
] }

sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "chrono",
  "json",
] }
