[workspace]
members = [
  "base",
  "entrypoint",
  "server",
  "models",
  "utils",
  "doc-macro",
  "certificates",
  "chatbot",
  "langs-api",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [
  "University of Helsinki <mooc@cs.helsinki.fi>",
  "Henrik Nygren <nygrenh@gmail.com>",
]
edition = "2024"
rust-version = "1.96.0" # minimum required Rust version, update if you use a new API
license = "Apache-2.0"

[profile.dev]
# Include only line tables so that we get line numbers in backtraces
debug = 1

# Speeds up development builds because the sqlx macros do a lot of work during compile time
[profile.dev.package.sqlx-macros]
opt-level = 3

# Speeds up development server startup time because parsing ip to country mappings benefits from the optimizations.
[profile.dev.package.ipnet]
opt-level = 3

[profile.release]
# Include only line tables so that we get line numbers in backtraces
debug = 1

[workspace.dependencies]
# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio = { version = "1.52.3", features = [
  "fs",
  "io-util",
  "sync",
  "parking_lot",
  "rt-multi-thread"
] }

# Rustls is a modern TLS library written in Rust.
rustls = { version = "0.23.41", default-features = false, features = ["ring"] }
# Pure Rust implementation of the Hash-based Message Authentication Code (HMAC).
hmac = "0.13.0"
# Pure Rust implementation of the SHA-2 hash function family.
sha2 = "0.11.0"

# 🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries.
sqlx = { version = "0.9.0", default-features = false, features = [
  "postgres",
  "macros",
  "sqlx-toml",
  "derive",
  "migrate",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "chrono",
  "json",
] }

# Utilities to work with `Stream` and `tokio`.
tokio-stream = { version = "0.1.18", features = [ "io-util" ] }
# Secret value wrapper to avoid leaking secrets in logs and memory.
secrecy = { version = "0.10.3", features = ["serde"] }

# Code-first OpenAPI schema generation for shared utility structs used in request/response models.
utoipa = { version = "5.5.0", features = ["chrono", "uuid"] }
