[package]
name = "headless-lms-certificates"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
headless-lms-utils = { path = "../utils" }
headless-lms-models = { path = "../models" }

# An SVG rendering library.
resvg = "0.44.0"
# An SVG simplification library.
usvg = "0.44.0"
# A simple, streaming XML writer.
xmlwriter = "0.1.0"
# High performance xml reader and writer
quick-xml = "0.37.2"
# International Components for Unicode
icu = { version = "1.3.2", features = ["std", "serde"] }
# Trait and struct definitions for the ICU data provider
icu_provider = "1.3.2"
# Single assignment cells and lazy values.
once_cell = "1.20.3"
# URL library for Rust, based on the WHATWG URL Standard
url = "2.5.4"
# Application-level tracing for Rust.
tracing = "0.1.41"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.95"
# Date and time library for Rust
chrono = "0.4.39"
# A library to generate and parse UUIDs.
uuid = { version = "1.13.1", features = ["serde", "v4", "v5"] }
# An implementation of futures and streams featuring zero allocations, composability, and itera…
futures = "0.3.31"
# supports loading ICU4X data from a single serialized blob
icu_provider_blob = "1.3.2"
