[package]
name = "headless-lms-certificates"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
headless-lms-utils = { path = "../utils" }
headless-lms-models = { path = "../models" }
rust-i18n = "3.1.5"

# An SVG rendering library.
resvg = "0.47.0"
# An SVG simplification library.
usvg = "0.47.0"
# A simple, streaming XML writer.
xmlwriter = "0.1.0"
# High performance xml reader and writer
quick-xml = "0.39.2"
# International Components for Unicode
icu = { version = "2.1.1", features = ["serde"] }
# Trait and struct definitions for the ICU data provider
icu_provider = "2.1.1"
# Locale fallback adapters for ICU data providers
icu_provider_adapters = "2.1.1"
# Single assignment cells and lazy values.
once_cell = "1.21.3"
# URL library for Rust, based on the WHATWG URL Standard
url = "2.5.8"
# Application-level tracing for Rust.
tracing = "0.1.44"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.102"
# Date and time library for Rust
chrono = "0.4.44"
# A library to generate and parse UUIDs.
uuid = { version = "1.21.0", features = ["serde", "v4", "v5"] }
# An implementation of futures and streams featuring zero allocations, composability, and itera…
futures = "0.3.32"
# supports loading ICU4X data from a single serialized blob
icu_provider_blob = "2.1.1"

[lints.clippy]
unwrap_used = "deny"
expect_used = "allow"
