[package]
name = "doc-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["printing", "parsing", "extra-traits"] }
proc-macro2 = "1.0.106"
quote = "1.0.44"

[lints.clippy]
unwrap_used = "deny"
expect_used = "allow"
