[package]
name = "headless-lms-entrypoint"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To add a new dependency, search for it using `cargo search` and take the latest version of the package
# and the comment from there.
[dependencies]
headless-lms-server = { path = "../server" }

# Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust
actix-web = "4.3.1"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.71"
# Combinators and utilities for working with Futures, Streams, Sinks, and the AsyncRead and AsyncWrite traits.
futures-util = "0.3.28"
# A runtime for writing reliable network applications without compromising speed.
tokio = "1.29.1"
