[package]
name = "headless-lms-models"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To add a new dependency, search for it using `cargo search` and take the latest version of the package
# and the comment from there.
[dependencies]
headless-lms-utils = { path = "../utils" }

# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio.workspace = true
# An implementation of futures and streams featuring zero allocations, composability, and itera…
futures = "0.3.31"
# A `dotenv` implementation for Rust
dotenv = "0.15.0"
# 🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries
sqlx.workspace = true
# A library to generate and parse UUIDs.
uuid = { version = "1.11.1", features = ["serde", "v4", "v5"] }
# A generic serialization/deserialization framework
serde = { version = "1.0.217", features = ["derive"] }
# Date and time library for Rust
chrono = { version = "0.4.39", features = ["serde"] }
# A JSON serialization file format
serde_json = "1.0.135"
# Adds #[derive(x)] macros for more traits
derive_more = "0.99.18"
# Extra iterator adaptors, iterator methods, free functions, and macros.
itertools = "0.14.0"
# URL library for Rust, based on the WHATWG URL Standard
url = "2.5.4"
# Application-level tracing for Rust.
tracing = "0.1.41"
# Utilities for enriching errors with `tracing`.
tracing-error = "0.2.1"
#  A library to acquire a stack trace (backtrace) at runtime in a Rust program. Should be removed after Rust 1.65.
backtrace = "0.3.74"
# This library provides a convenient derive macro for the standard library's std::error::Error trait.
thiserror = "2.0.11"
# generate typescript bindings from rust types
ts-rs = { git = "https://github.com/Heliozoa/ts-rs", rev = "94bf3c040ece6627b69f0d7095c0a5e2984adc86", features = [
  "bytes-impl",
  "chrono-impl",
  "serde-compat",
  "serde-json-impl",
  "uuid-impl",
], optional = true }
# Email client
lettre = "0.11.1"
# Random number generators and other randomness functionality.
rand = "0.8.5"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.95"

[dev-dependencies]
# Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs.
pretty_assertions = "1.4.1"
# Provides compatibility between `tracing` and the `log` crate.
tracing-log = "0.2.0"
# Utilities for enriching errors with `tracing`.
tracing-error = "0.2.1"
# Utilities for implementing and composing `tracing` subscribers.
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# HTTP mocking for Rust.
mockito = "1.1.1"

[features]
ts_rs = ["ts-rs", "headless-lms-utils/ts_rs"]
