[package]
name = "headless-lms-models"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To add a new dependency, search for it using `cargo search` and take the latest version of the package
# and the comment from there.
[dependencies]
headless-lms-base = { path = "../base" }
headless-lms-utils = { path = "../utils" }

# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio.workspace = true
# An implementation of futures and streams featuring zero allocations, composability, and itera…
futures = "0.3.32"
# A `dotenv` implementation for Rust
dotenvy = "0.15"
# 🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries
sqlx.workspace = true
# A library to generate and parse UUIDs.
uuid = { version = "1.23.2", features = ["serde", "v4", "v5"] }
# A generic serialization/deserialization framework
serde = { version = "1.0.228", features = ["derive"] }
# Pure Rust implementation of the SHA-2 hash function family.
sha2.workspace = true
# Pure Rust implementation of the Hash-based Message Authentication Code (HMAC).
hmac.workspace = true
# Date and time library for Rust
chrono = { version = "0.4.44", features = ["serde"] }
# A JSON serialization file format
serde_json = "1.0.150"
# Code-first OpenAPI schema generation support for shared API models
utoipa = { version = "5.5.0", features = ["chrono", "uuid"] }
# Adds #[derive(x)] macros for more traits
derive_more = { version = "2.1.1", features = ["full"] }
# Extra iterator adaptors, iterator methods, free functions, and macros.
itertools = "0.14.0"
# URL library for Rust, based on the WHATWG URL Standard
url = "2.5.8"
# Percent encoding for URL-safe path storage
percent-encoding = "2.3.2"
# Application-level tracing for Rust.
tracing = "0.1.44"
# Utilities for enriching errors with `tracing`.
tracing-error = "0.2.1"
#  A library to acquire a stack trace (backtrace) at runtime in a Rust program. Should be removed after Rust 1.65.
backtrace = "0.3.76"
# This library provides a convenient derive macro for the standard library's std::error::Error trait.
thiserror = "2.0.18"
# generate typescript bindings from rust types
ts-rs = { git = "https://github.com/Heliozoa/ts-rs", rev = "94bf3c040ece6627b69f0d7095c0a5e2984adc86", features = [
  "bytes-impl",
  "chrono-impl",
  "serde-compat",
  "serde-json-impl",
  "uuid-impl",
], optional = true }
# Email client
lettre = "0.11.22"
# Random number generators and other randomness functionality.
rand = "0.10.1"
# OS random number generator, needed for argon2 password hashing.
rand_core = { version = "0.6", features = ["getrandom"] }
# Flexible concrete Error type built on std::error::Error
# Zero value on drop for security
zeroize = { version = "1.8.2", features = ["derive"] }
# Constant-time cryptographic operations for security. (Not O(1), but always the the longest time)
subtle = "2.6.1"
# for hex/base64 helpers
hex = "0.4"
base64 = "0.22"
serde_bytes = "0.11"
anyhow = "1.0.102"
# HTTP client for Rust
reqwest = { version = "0.13.4", features = ["json"] }
# Secret value wrapper to avoid leaking secrets in logs and memory
secrecy.workspace = true
# Password hashing using Argon2id
argon2 = "0.5.3"

[dev-dependencies]
# Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs.
pretty_assertions = "1.4.1"
# HTTP mocking for Rust.
mockito = "1.7.2"

[lints.clippy]
unwrap_used = "deny"
expect_used = "allow"
