[package]
name = "headless-lms-actix"
version = "0.1.0"
authors = ["Henrik Nygren <nygrenh@gmail.com>"]
edition = "2021"
default-run = "headless-lms-actix"
rust-version = "1.56.0"  # minimum required Rust version, update if you use a new API

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To add a new dependency, search for it using `cargo search` and take the latest version of the package
# and the comment from there.
[dependencies]
headless-lms-models = { path = "../models" }
headless-lms-utils = { path = "../utils" }
doc-macro = { path = "../doc-macro" }

# Actix Web is a powerful, pragmatic, and extremely fast web framework for Rust
actix-web = "4.0.1"
# Static file serving for Actix Web
actix-files = "0.6.0"
# Multipart form support for Actix web.
actix-multipart = "0.4.0"
# Strongly Typed Mimes
mime = "0.3.16"
# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio = { version = "1.19.2", features = ["fs", "io-util"] }
# Utilities to work with `Stream` and `tokio`.
tokio-stream = "0.1.9"
# An implementation of futures and streams featuring zero allocations, composability, and itera…
futures = "0.3.21"
# A `dotenv` implementation for Rust
dotenv = "0.15.0"
# A simple library to work with listenfds passed from the outside (systemd/catflap socket activation)
listenfd = "1.0.0"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.57"
# 🧰 The Rust SQL Toolkit. An async, pure Rust SQL crate featuring compile-time checked queries
sqlx = { version = "0.6.0", features = [
  "postgres",
  "runtime-actix-rustls",
  "uuid",
  "chrono",
  "json",
  "offline"
] }
# A library to generate and parse UUIDs.
uuid = { version = "1.1.2", features = ["serde", "v4", "v5"] }
# A generic serialization/deserialization framework
serde = { version = "1.0.137", features = ["derive"] }
# Date and time library for Rust
chrono = { version = "0.4.19", features = ["serde"] }
# A JSON serialization file format
serde_json = "1.0.81"
# Adds #[derive(x)] macros for more traits
derive_more = "0.99.17"
# Types and traits for working with bytes
bytes = "1.1.0"
# Extra iterator adaptors, iterator methods, free functions, and macros.
itertools = "0.10.3"
# the BLAKE3 hash function
blake3 = "1.3.1"
# Recursively walk a directory.
walkdir = "2.3.2"
# higher level HTTP client library
reqwest = { version = "0.11.10", features = ["brotli", "gzip", "json"] }
# Sessions for Actix web
actix-session = { version = "0.7.1", features = ["cookie-session"] }
# An extensible, strongly-typed implementation of OAuth2
oauth2 = "4.2.0"
# URL library for Rust, based on the WHATWG URL Standard
url = "2.2.2"
# Application-level tracing for Rust.
tracing = "0.1.35"
# Utilities for implementing and composing `tracing` subscribers.
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
# Structured logging middleware for actix-web.
tracing-actix-web = "0.6.0"
# Utilities for enriching errors with `tracing`.
tracing-error = "0.2.0"
# Provides compatibility between `tracing` and the `log` crate.
tracing-log = "0.1.3"
# This library provides a convenient derive macro for the standard library's std::error::Error trait.
thiserror = "1.0.31"
# generate typescript bindings from rust types
ts-rs = { git = "https://github.com/Heliozoa/ts-rs", rev = "71bba3a18cdc5bc02c63b2772fd5324b1b07227b", features = [
  "chrono-impl",
  "serde-compat",
  "serde-json-impl",
  "uuid-impl",
], optional = true }
# restricting the transitive dependencies of actix-web during beta.
# HTTP primitives for the Actix ecosystem .
actix-http = "3.0.4"
# Fast CSV parsing with support for serde.
csv = "1.1.6"
# Email client
lettre = "0.10.0-rc.7"
# An implementation of regular expressions for Rust.
regex = "1.5.6"
# Single assignment cells and lazy values.
once_cell = "1.12.0"
# A rate-limiting middleware for actix-web backed by the governor crate
actix-governor = "0.3.0"
# Detect if a user-agent is a known bot
isbot = "0.1.2"
# user-agent strings parser
woothee = "0.13.0"


# Workaround for this issue: https://github.com/tkaitchuck/aHash/issues/95. Once the issue has been resolved, this dependency can be removed.
indexmap = "1.8.2"

[dev-dependencies]
# Overwrite `assert_eq!` and `assert_ne!` with drop-in replacements, adding colorful diffs.
pretty_assertions = "1.2.1"
# HTTP mocking for Rust.
mockito = "0.31.0"
# Random number generators and other randomness functionality.
rand = "0.8.5"

[features]
ts_rs = ["ts-rs", "headless-lms-models/ts_rs", "headless-lms-utils/ts_rs"]
